--- a/wolf3d/code/iphone/Info.plist
+++ b/wolf3d/code/iphone/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string>${PRODUCT_NAME}_icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.idsoftware.${PRODUCT_NAME:identifier}</string>
+	<string>${PROFILE_PREFIX}.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,7 +23,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
@@ -32,5 +32,16 @@
 	<string>UIInterfaceOrientationLandscapeLeft</string>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.idsoftware.wolf3d</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wolf3d</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
