wolf3d_iphone_v1.2 (code only)

--- a/wolf3d/code/iphone/Info.plist
+++ b/wolf3d/code/iphone/Info.plist
@@ -7,13 +7,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>${PRODUCT_NAME}+</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string>${PRODUCT_NAME}_icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>${PROFILE_PREFIX}.${PRODUCT_NAME:identifier}</string>
+	<string>com.idsoftware.${PRODUCT_NAME:identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,26 +22,28 @@
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.idsoftware.wolf3dp</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wolf3dp</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
 	<key>UIInterfaceOrientation</key>
 	<string>UIInterfaceOrientationLandscapeLeft</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.idsoftware.wolf3d</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>wolf3d</string>
-			</array>
-		</dict>
-	</array>
 </dict>
 </plist>
