add LuaTestWorld and test the console. It works!

--- a/kimi_no_monogatari/test/TestConsole/TestConsole.vcproj
+++ b/kimi_no_monogatari/test/TestConsole/TestConsole.vcproj
@@ -187,7 +187,11 @@
 			Name="TestWorld"
 			>
 			<File
-				RelativePath="..\TestWorld\src\TestWorld.cpp"
+				RelativePath="..\TestWorld\src\LuaTestWorld.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\TestWorld\LuaTestWorld.h"
 				>
 			</File>
 			<File
