--- a/kimi_no_monogatari/test/TestConsole/TestConsole.vcproj
+++ b/kimi_no_monogatari/test/TestConsole/TestConsole.vcproj
@@ -274,6 +274,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\include\Random.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\include\Random.h"
+				>
+			</File>
+			<File
+				RelativePath="..\client\RandomUtil.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\client\RandomUtil.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\src\Session.cpp"
 				>
 			</File>
@@ -287,6 +303,14 @@
 			</File>
 			<File
 				RelativePath="..\..\common\include\SessionManager.h"
+				>
+			</File>
+			<File
+				RelativePath="..\client\TestGameRobot.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\client\TestGameRobot.h"
 				>
 			</File>
 		</Filter>
